# HiveWeave

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md  TECH_STACK.md  backend-stack-comparison.html  code-review-py-backend.md  opencode.json  org-optimization-spec.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pypoe-diagnosis-conclusion.md  setup.bat  start-all.bat  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  tmp_lock_db.ps1  tmp_lock_file.ps1  tsconfig.base.json
apps/hiveweave-py/: .env.example  .gitignore  code-review-llm-tools.md  db_health.py  pyproject.toml
apps/hiveweave-py/tests/: conftest.py  test_acceptance_checklist_evening.py  test_admit_wake_demote.py  test_agent_interruption_counting.py  test_assign_is_claim.py  test_attestation_auto_attach.py  test_attestation_waiver.py  test_bash_self_destruct.py  test_browser_qa_integration.py  test_ceo_mid_builder_roles.py  test_chat_message_types.py  test_check_agent_status.py  test_classify_structural.py  test_complete_idle.py  test_conflict_marker_scan.py  test_delete_project.py  test_dispatch_readonly_reminder.py  test_dogfood_p1_fixes.py  test_dogfood_p2_fixes.py  test_doom_loop.py  test_doom_loop_commit_turn.py  test_doom_readonly_exemption.py  test_files_changed_normalize.py  test_finalize_streaming.py  test_game_time_alarm_safety.py  test_game_time_alarms.py  test_git_worktree_create.py  test_give_up_ack_spare.py  test_hard_gates_policy.py  test_hard_gates_wait_attest.py  test_hire_platform_notify.py  test_hiveweave_dir_protection.py  test_hook_task_advance.py  test_hooks_registry.py  test_idle_architecture_p0.py  test_idle_architecture_p12.py  test_inbox_background_delivery.py  test_inbox_lifecycle.py  test_inbox_triage.py  (+54 more)
docs/: AI工程组织_MVP蓝图.md  (+8 more)
(+359 files in other folders)
