[project]
name = "hiveweave"
version = "0.1.0"
description = "HiveWeave backend — Python port from Elixir/Phoenix"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiveweave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# 只检查项目代码，不分析第三方库源码
follow_imports = "skip"
# 增量缓存
incremental = true
# 不强制严格类型注解（渐进式迁移）
check_untyped_defs = false
# 排除测试和迁移文档
exclude = [
    "tests/",
    "docs/",
]
